added overlay for title to all pages and clean css

--- a/Project/index.html
+++ b/Project/index.html
@@ -66,26 +66,28 @@
 	<body>
 		<div class="overlay">
 			<h1 class="maintitle">Welcome to the Museum</h1>
+		</div>
 
+		<div class="row justify-content-center">
 			<div class="input-group mb-3 col-3">
 				<input type="text" class="form-control" id="nameInput" placeholder="Search.." aria-label="Search.." aria-describedby="basic-addon2">
 				<div class="input-group-append">
 					<button class="btn btn-secondary" type="button"><i class="fa fa-search" arial-hidden="true"></i></button>
 				</div>
 			</div>
+		</div>
 
-			<div class="container">
-				<!-- Content here -->
-				Brief Museum description..
-			</div>
+		<div class="container">
+			<!-- Content here -->
+			Brief Museum description..
+		</div>
 
-			<!-- Icons -->
-			<div class="iconstyle">
-				<a style="text-decoration: none" href="#" class="fa fa-instagram"></a>
-				<a style="text-decoration: none" href="#" class="fa fa-facebook"></a>
-				<a style="text-decoration: none" href="#" class="fa fa-telegram"></a>
-				<a style="text-decoration: none" href="#" class="fa fa-twitter"></a>
-			</div>
+		<!-- Icons -->
+		<div class="iconstyle">
+			<a style="text-decoration: none" href="#" class="fa fa-instagram"></a>
+			<a style="text-decoration: none" href="#" class="fa fa-facebook"></a>
+			<a style="text-decoration: none" href="#" class="fa fa-telegram"></a>
+			<a style="text-decoration: none" href="#" class="fa fa-twitter"></a>
 		</div>
 	</body>
 </html>
