--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -49,6 +49,7 @@
 			crossorigin="anonymous"
 		></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<link href="CSS/style.css" rel="stylesheet" />
 		<script>
 			function hello(form) {
 				var hi = {
@@ -71,8 +72,11 @@
 		</script>
 	</head>
 	<body>
+		<div class="overlay">
+			<h1 class="maintitle">Questionnaire</h1>
+		</div>
+
 		<section id="question-page">
-			<h1 id="questionnaire-title" class="text-center">Questionnaire</h1>
 			<form id="questionnaire">
 				<h4 class="question">Question 1: What is your name?</h4>
 				<div class="mb-3">
