--- a/Project/quiz.html
+++ b/Project/quiz.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
     <head>
     <!-- Required meta tags -->
@@ -169,10 +168,6 @@
     </script>
 
     <style>
-        h1{
-            font-size: 70px;
-        }
-
         .card{
             width: 75vw;
             height: 172px;
@@ -254,9 +249,9 @@
     </style>
     </head>
 	<body>        
-        <div class="text-center">
-            <h1>Quiz on (Artifact name)</h1>
-        </div>
+        <div class="overlay">
+			<h1 class="maintitle">Quiz</h1>
+		</div>
 
         <div class="card">
             <div class="text-center">
