added favicon and titles

--- a/Project/index.html
+++ b/Project/index.html
@@ -17,6 +17,7 @@
 		<link rel="stylesheet" href="CSS/style.css" />
 		<script src="JS/jscript.js"></script>
 		<title>Homepage</title>
+		<link rel="icon" type="image/x-icon" href="Images/museum.png">
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
