--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -9,6 +9,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="JS/coverflow.js"></script>
 
+    <title>Interactive Timeline</title>
+		<link rel="icon" type="image/x-icon" href="Images/museum.png">
+
     <script>
       document.addEventListener("DOMContentLoaded", function() {		
         getArtifacts();
