--- a/Project/events.html
+++ b/Project/events.html
@@ -10,6 +10,10 @@
 		<script src="JS/jscript.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<link href="CSS/style.css" rel="stylesheet" />
+
+		<title>Events</title>
+		<link rel="icon" type="image/x-icon" href="Images/museum.png">
+
 		<script>
 			document.addEventListener("DOMContentLoaded", function () {
 				getEvents();
