--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -50,6 +50,10 @@
 		></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<link href="CSS/style.css" rel="stylesheet" />
+
+		<title>Questionnaire</title>
+		<link rel="icon" type="image/x-icon" href="Images/museum.png">
+
 		<script>
 			function hello(form) {
 				var hi = {
