--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -43,13 +43,16 @@
 			integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 			crossorigin="anonymous"
 		/>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
 			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 			crossorigin="anonymous"
 		></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script>
+			document.addEventListener("DOMContentLoaded", function () {
+				getLoggedIn();
+			});
 			function hello(form) {
 				var hi = {
 					name: form.name.value,
@@ -67,6 +70,19 @@
 						location.href = "../Project/questionsubmit.html";
 					},
 				});
+				function getLoggedIn() {
+					var loggedIn = $.ajax({
+						url: "http://localhost:3000/checkLogin",
+						type: "POST",
+						crossDomain: true,
+						xhrFields: {
+							withCredentials: true,
+						},
+						success: function (result) {
+							console.log(result);
+						},
+					});
+				}
 			}
 		</script>
 		<title>Questionnaire</title>
