--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -70,7 +70,7 @@
 						location.href = "../Project/questionsubmit.html";
 					},
 				});
-				function getLoggedIn() {
+				var geLoggedIn = function () {
 					var loggedIn = $.ajax({
 						url: "http://localhost:3000/checkLogin",
 						type: "POST",
@@ -82,7 +82,7 @@
 							console.log(result);
 						},
 					});
-				}
+				};
 			}
 		</script>
 		<title>Questionnaire</title>
