--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -75,7 +75,7 @@
 						location.href = "../Project/questionsubmit.html";
 					},
 				});
-				var geLoggedIn = function () {
+				var getLoggedIn = function () {
 					var loggedIn = $.ajax({
 						url: "http://localhost:3000/checkLogin",
 						type: "POST",
