--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -53,7 +53,7 @@
 			crossorigin="anonymous"
 		></script>
 		<title>Questionnaire</title>
-		<link rel="icon" type="image/x-icon" href="Images/museum.png">
+		<link rel="icon" type="image/x-icon" href="Images/museum.png" />
 		<script>
 			document.addEventListener("DOMContentLoaded", function () {
 				getLoggedIn();
@@ -75,7 +75,7 @@
 						location.href = "../Project/questionsubmit.html";
 					},
 				});
-				var geLoggedIn = function () {
+				var getLoggedIn = function () {
 					var loggedIn = $.ajax({
 						url: "http://localhost:3000/checkLogin",
 						type: "POST",
