Making changes to artifact page

--- a/Project/artifact.html
+++ b/Project/artifact.html
@@ -97,7 +97,7 @@
 		<div class="container-fluid artifact-title">
 			<div class="row">
 				<div class="col-md-auto mx-auto mt-4">
-					<h1 class="Art-Title">Artifact Title</h1>
+					<h1 id="artifactName" class="Art-Title">No name loaded.</h1>
 				</div>
 			</div>
 		</div>
@@ -115,11 +115,6 @@
 			</div>
 		</div>
 
-		<div class="row">
-			<div class=" text-center col-12">
-				<h2 id="artifactName">No name loaded.</h2>
-			</div>
-		</div>
 
 		<div class="container-fluid description-box">
 			<div class="row w-75 mx-auto">
