--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -31,12 +31,12 @@
             console.log(data);
 
             //loop each json object and render it in HTML
-            for(var i = 0; i < data.length; i++) {
+            for(var i = 0; i < 20; i++) {
               //var artifactContainer = document.createElement("a");
               //artifactContainer.href = data[i].artifact_id;
               
               var image = document.createElement("img");
-              image.setAttribute("src", "images/" + data[i].image_source);
+              image.setAttribute("src", data[i].image_source);
               image.setAttribute("style", "height: 300px; width: 300px;");
               image.setAttribute("alt", data[i].name);
               image.setAttribute("data-info", data[i].name);
