--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -52,6 +52,7 @@
 			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 			crossorigin="anonymous"
 		></script>
+		<link href="CSS/style.css" rel="stylesheet" />
 		<title>Questionnaire</title>
 		<link rel="icon" type="image/x-icon" href="Images/museum.png" />
 		<script>
@@ -91,7 +92,6 @@
 
 			};
 		</script>
-		<title>Questionnaire</title>
 	</head>
 	<body>
 		<div class="overlay">
