fixed the boostrap

--- a/Project/artifact.html
+++ b/Project/artifact.html
@@ -34,21 +34,24 @@
 			/* padding-left: 12%; */
 		}
 
-		#description {
+		#description-1 {
 			background-color: white;
 			opacity: 70%;
 			margin-bottom: 2ch;
-			/* margin-left: 2ch; */
+			margin-left: 1ch;
+			text-align: center;
 		}
 
 		#description, #date {
 			text-align: center;
 			background-color: white;
 			margin-bottom: 2ch;
-			
-
-
 			opacity: 70%;
+		}
+
+		#date {
+			margin-left: 1ch;
+
 		}
 
 		#artifactImage {
@@ -110,7 +113,7 @@
 			</div>
 		</div>
 
-		<div class="row">
+		<div class="row w-75 mx-auto">
 			<div class=" text-center col-12">
 				<h2 id="artifactName">No name loaded.</h2>
 			</div>
@@ -121,7 +124,7 @@
 				<div class="col-sm-8" id="description">
 					<p id="descriptionText">No content loaded.</p>
 				</div>
-				<div class="col-sm-4" id="date">
+				<div class="col" id="date">
 					<p id="dateText">No content loaded.</p>
 				</div>
 			</div>
@@ -129,11 +132,11 @@
 
 		<div class="container-fluid related-topics">
 			<div class="row w-75 mx-auto">
-				<div class="col" id="description">
+				<div class="col-sm-8" id="description">
 					<p id="related">related topics</p>
 				</div>
 
-				<div class="col-md-auto" id="description-1">
+				<div class="col" id="description-1">
 					<p>find artifacts</p>
 				</div>
 			</div>
