change timeline src

--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -47,7 +47,7 @@
 
               var img = document.createElement("img");
               img.alt = data[i].description;
-              img.src = "Images/" + data[i].image_source;
+              img.src = data[i].image_source;
 
               a.appendChild(img);
 
