limited timeline elements

--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -32,7 +32,7 @@
             console.log(data);
 
             //loop each json object and render it in HTML
-            for(var i = 0; i < data.length; i++) {
+            for(var i = 0; i < 250; i++) {
               var container = document.getElementById("coverContainer");
 
               var outerDiv = document.createElement("div");
