--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -32,7 +32,7 @@
             console.log(data);
 
             //loop each json object and render it in HTML
-            for(var i = 0; i < 250; i++) {
+            for(var i = 0; i < data.length; i++) {
               var container = document.getElementById("coverContainer");
 
               var outerDiv = document.createElement("div");
@@ -42,6 +42,7 @@
               innerDiv.classList.add("slide-inner");
 
               var a = document.createElement("a");
+              console.log(data[i].artifact_id);
               a.href = "artifact.html?id=" + data[i].artifact_id;
               a.dataset.slide = i + 1;
 
