--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -29,6 +29,9 @@
 			#exampleFormControlTextarea1 {
 				width: 40%;
 			}
+			#textarea1 {
+				width: 40%;
+			}
 			#Select1 {
 				width: 40%;
 			}
