--- a/Project/artifact.html
+++ b/Project/artifact.html
@@ -89,6 +89,9 @@
 
 				var image = document.getElementById("artifactImage");
 				image.src = data[0].image_source;
+
+				var relatedTopic = document.getElementById("relatedTopic");
+				relatedTopic.innerHTML = data[0].artifact_tag;
 			},
 			error: function (xhr, status, error) {
 				//on failure to fetch the request write to console
@@ -132,7 +135,7 @@
 	<div class="container-fluid related-topics">
 		<div class="row w-75 mx-auto">
 			<div class="col-sm-8" id="description">
-				<p id="related">related topics</p>
+				<a href="index.html" id="relatedTopic" class="related">related topics</a>
 			</div>
 
 			<div class="col" id="description-1">
