--- a/Project/data_importer.html
+++ b/Project/data_importer.html
@@ -66,7 +66,8 @@
                                 description: dbDescription,
                                 image_source: dbImage,
                                 date: dbBeginDate,
-                                location_id: dbRandLocation
+                                location_id: dbRandLocation,
+                                artifact_tag: dbTags
                             },
                             success: function (data) {
                                 console.log(data);
