Minor css changes

--- a/Project/artifact.html
+++ b/Project/artifact.html
@@ -108,8 +108,8 @@
 	</div>
 
 	<div class="container-fluid">
-		<div class="row">
-			<div class="col-md-auto mx-auto mt-2">
+		<div class="row w-75 mx-auto">
+			<div class="text-center col-12">
 				<img src="https://via.placeholder.com/250x250" class="img-fluid" alt="Artifact Image"
 					id="artifactImage" />
 			</div>
