--- a/Project/admin.html
+++ b/Project/admin.html
@@ -37,7 +37,6 @@
 			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 			crossorigin="anonymous"
 		></script>
-
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script>
 			document.addEventListener("DOMContentLoaded", function () {
@@ -151,10 +150,14 @@
 						}
 					},
 					error: function (xhr, status, error) {
+						divContainer = document.createElement("div");
+						divContainer.classList.add("container");
 						errorMessage = document.createElement("h1");
+						errorMessage.classList.add("text-center");
 						errorMessage.setAttribute("id", "error-message");
 						errorMessage.innerHTML = xhr.status + ": " + error;
-						document.getElementById("admin").appendChild(errorMessage);
+						divContainer.appendChild(errorMessage);
+						document.getElementById("admin").appendChild(divContainer);
 					},
 				});
 			};
