--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -55,6 +55,7 @@
 			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 			crossorigin="anonymous"
 		></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href="CSS/style.css" rel="stylesheet" />
 		<title>Questionnaire</title>
 		<link rel="icon" type="image/x-icon" href="Images/museum.png" />
@@ -77,7 +78,6 @@
 					},
 				});
 			}
-
 		</script>
 	</head>
 	<body>
