--- a/Project/questionsubmit.html
+++ b/Project/questionsubmit.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href="CSS/style.css" rel="stylesheet" />
 		<style></style>
 		<script src="JS/jscript.js"></script>
