--- a/Project/index.html
+++ b/Project/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 	<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap CSS -->
 		<link
 			rel="stylesheet"
