--- a/Project/questionsubmit.html
+++ b/Project/questionsubmit.html
@@ -16,8 +16,16 @@
 			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 			crossorigin="anonymous"
 		></script>
+		<script>
+			function index() {
+				location.href = "../Project/index.html";
+			}
+		</script>
 	</head>
 	<body>
-		<h4>Thank you for submitting the form!</h4>
+		<div class="container">
+			<h4>Thank you for submitting the form!</h4>
+			<button onclick="index()">Go Back to Home</button>
+		</div>
 	</body>
 </html>
