some fixes for responsiveness

--- a/Project/eventdetails.html
+++ b/Project/eventdetails.html
@@ -147,11 +147,11 @@
           <a href="images/di.jpg">
           <img class="event-image" id="eventpic" src="" alt="Event Image">
           </a>
-          <div class="col-sm-4  btn-register-col">
+          <div class="btn-register-col">
             <a href="#" class="btn btn-register">Register Now</a>
-          </div>
+          </div>    
         </div>
-
+        
         <div class="col-sm-4 event-details">
           <div class="event-date-location">
             <h3 class="event-date-location-header">Date and Location:</h3>
