--- a/Project/artifact.html
+++ b/Project/artifact.html
@@ -61,20 +61,6 @@
 			height: 250px;
 		}
 	</style>
-
-	<script>
-		document.addEventListener("DOMContentLoaded", function () {
-			queryArtifactID();
-		});
-
-
-<head>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-	<script src="JS/jscript.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<link href="CSS/style.css" rel="stylesheet" />
-</head>
 <style>
 	.Art-Title {
 		color: white;
@@ -169,60 +155,6 @@
 	}
 </script>
 
-<body>
-	<div class="overlay">
-		<h1 class="maintitle">Artifact Information</h1>
-	</div>
-
-	<div class="container-fluid">
-		<div class="row w-75 mx-auto">
-			<div class="text-center col-12">
-				<img src="https://via.placeholder.com/250x250" class="img-fluid" alt="Artifact Image"
-					id="artifactImage" />
-			</div>
-		</div>
-	</div>
-
-
-		var queryArtifactID = function () {
-			const urlParams = new URLSearchParams(window.location.search);
-			//get data from database using $.ajax post request from jquery
-			var data = $.ajax({
-				url:
-					"http://localhost:3000/queryArtifactByID?id=" + urlParams.get("id"),
-				type: "POST",
-				contentType: "application/json; charset=utf-8",
-				success: function (data) {
-					//on success render the returned data
-					console.log(data);
-
-					var description = document.getElementById("descriptionText");
-					description.innerHTML = data[0].description;
-
-					var artifactName = document.getElementById("artifactName");
-					artifactName.innerHTML = data[0].name;
-
-					if (data[0].date == null)
-						document.getElementById("dateText").innerHTML = "Date Unknown";
-					else {
-						var t = data[0].date.substring(0, data[0].date.indexOf("T"));
-						var date = (document.getElementById("dateText").innerHTML = t);
-					}
-
-					var image = document.getElementById("artifactImage");
-					image.src = data[0].image_source;
-
-					var relatedTopic = document.getElementById("relatedTopic");
-					relatedTopic.innerHTML = data[0].artifact_tag;
-				},
-				error: function (xhr, status, error) {
-					//on failure to fetch the request write to console
-					console.error(status + ": " + xhr.responseText);
-				},
-			});
-		};
-	</script>
-
 	<body>
 		<div class="overlay">
 			<h1 class="maintitle">Artifact Information</h1>
@@ -245,10 +177,6 @@
 
 			<div class="text-center col-12">
 				<h2 id="artifactName" class="Art-Title">No name loaded.</h2>
-
-			<div class="col-sm-8" id="description">
-				<a id="relatedTopic" class="related">related topics</a>
-
 			</div>
 		</div>
 
@@ -266,9 +194,7 @@
 		<div class="container-fluid related-topics">
 			<div class="row w-75 mx-auto">
 				<div class="col-sm-8" id="description">
-					<a href="index.html" id="relatedTopic" class="related"
-						>related topics</a
-					>
+					<a href="index.html" id="relatedTopic" class="related">related topics</a>
 				</div>
 
 				<div class="col" id="description-1">
