added tags, styled login page a bit

--- a/Project/login.html
+++ b/Project/login.html
@@ -92,7 +92,7 @@
 		<h1>Login</h1>
 		<form>
 			<label for="username">Username:</label>
-			<input type="text" name="username" />
+			<input type="text" name="username" /><br />
 			<label for="password">Password</label>
 			<input type="password" name="password" />
 			<button type="button" onclick="login(this.form)">Submit</button>
