--- a/Project/admin.html
+++ b/Project/admin.html
@@ -125,6 +125,20 @@
 							divQ4.appendChild(label4);
 							divQ4.appendChild(textarea3);
 
+							var divQ5 = document.createElement("div");
+							divQ5.classList.add("mb-3");
+							var label5 = document.createElement("label");
+							label5.classList.add("form-label", "labelQ");
+							label5.setAttribute("for", "textarea4");
+							label5.innerHTML = "Tags:";
+							var textarea4 = document.createElement("textarea");
+							textarea4.classList.add("form-control");
+							textarea4.setAttribute("id", "textarea4");
+							textarea4.setAttribute("name", "tags");
+							textarea4.setAttribute("rows", "1");
+							divQ5.appendChild(label5);
+							divQ5.appendChild(textarea4);
+
 							divSubmit = document.createElement("div");
 							h4Submit = document.createElement("h4");
 							h4Submit.setAttribute("id", "submit-button-text");
@@ -143,6 +157,7 @@
 							form.appendChild(divQ2);
 							form.appendChild(divQ3);
 							form.appendChild(divQ4);
+							form.appendChild(divQ5);
 							form.appendChild(divSubmit);
 
 							divOverall.appendChild(divOverlay);
@@ -169,6 +184,7 @@
 					date: form.date.value,
 					description: form.description.value,
 					image: form.image.value,
+					tag: form.tag.value,
 				};
 			}
 		</script>
